syntax = "proto3";

package protocol;

message SearchString {
    string Search = 1;
}

message MusicianWithCount {
    string Name = 1;
    int32 Count = 2;
}

message TabWithSize {
    string Musician = 1;
    string Name = 2;
    double Size = 3;
}

service Tabs {
    rpc GetAuthorsByLetter(SearchString) returns (stream MusicianWithCount) {}
    rpc GetAuthorsByName(SearchString) returns (stream MusicianWithCount) {}
    rpc FindTabsByName(SearchString) returns (stream TabWithSize) {}
}